syntax = "proto3";

option go_package = "./;pb";

package pb;

service UserService {
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
}

message GetUserInfoRequest {
  string user_id = 1;
}

message GetUserInfoResponse {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
  string age = 4;
}